# cr8s

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-07-15-205756_create_rustaceans/: up.sql
migrations/2024-07-15-205804_create_crates/: down.sql  up.sql
src/: main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
